fixed spacing

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ p,i{
     flex-direction: column;
     align-items: center;
     /* box-sizing: border-box; */
-    padding: 18px 14px;
+    padding: 18px 14px 22px 14px;
     box-sizing: border-box;
     row-gap: 18px;
 }
@@ -196,7 +196,7 @@ p,i{
     border-left: solid 7px #0b1b2b;
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
+    row-gap: 12px;
 }
 
 .ticket-card-title{
